--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -164,35 +164,42 @@ fieldset.checkboxes input {
 .floorspace .current:before, .floorspace .current:after {
   position: absolute;
   width: 4px;
-  height: 10px;
-  border-radius: 5px;
+  height: 12px;
+  border-radius: 10px;
   content: '';
+  top: 4px;
 }
 .floorspace .current:before {
   background: rgba(255, 0, 0, 0.8);
+  left: 4px;
 }
 .floorspace .current:after {
   background: rgba(0, 0, 0, 0.8);
+  left: 10px;
 }
 
 .floorspace .left:before {
-  top: 2px;
-  left: 2px;
+  top: 4px;
+  left: 4px;
 }
 .floorspace .left:after {
-  bottom: 2px;
-  right: 2px;
+  top: auto;
+  left: auto;
+  bottom: 4px;
+  right: 4px;
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
 }
 
 .floorspace .right:before {
-  top: 2px;
-  right: 2px;
+  top: 4px;
+  right: 4px;
+  left: auto;
 }
 .floorspace .right:after {
-  bottom: 2px;
-  left: 2px;
+  top: auto;
+  bottom: 4px;
+  left: 4px;
   -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
