fixed incorrectly rotated visualised cells

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -149,7 +149,7 @@ fieldset.checkboxes input {
   font-size: 20px;
 }
 
-.floorspace td {
+.floorspace td div {
   border-radius: 2px;
   width: 30px;
   height: 30px;
@@ -157,32 +157,39 @@ fieldset.checkboxes input {
   padding: 3px;
 }
 
-.floorspace .current {
+.floorspace .current div {
   position: relative;
   background: rgba(0, 0, 0, 0.5);
 }
-.floorspace .current:before, .floorspace .current:after {
+.floorspace .current div:before, .floorspace .current div:after {
   position: absolute;
-  width: 4px;
-  height: 12px;
+  width: 6px;
+  height: 8px;
   border-radius: 10px;
   content: '';
   top: 4px;
+  text-align: center;
+  font-size: 6px;
+  padding: 3px 0;
 }
-.floorspace .current:before {
+.floorspace .current div:before {
+  content: 'L';
   background: rgba(255, 0, 0, 0.8);
   left: 4px;
 }
-.floorspace .current:after {
+.floorspace .current div:after {
+  content: 'R';
   background: rgba(0, 0, 0, 0.8);
-  left: 10px;
+  left: 12px;
 }
 
-.floorspace .left:before {
+.floorspace .left div:before {
   top: 4px;
   left: 4px;
+  content: 'L';
 }
-.floorspace .left:after {
+.floorspace .left div:after {
+  content: 'R';
   top: auto;
   left: auto;
   bottom: 4px;
@@ -191,12 +198,14 @@ fieldset.checkboxes input {
   transform: rotate(45deg);
 }
 
-.floorspace .right:before {
+.floorspace .right div:before {
   top: 4px;
   right: 4px;
   left: auto;
+  content: 'R';
 }
-.floorspace .right:after {
+.floorspace .right div:after {
+  content: 'L';
   top: auto;
   bottom: 4px;
   left: 4px;
@@ -204,22 +213,22 @@ fieldset.checkboxes input {
   transform: rotate(-45deg);
 }
 
-.floorspace .north {
+.floorspace .north div {
   -webkit-transform: rotate(0deg);
   transform: rotate(0deg);
 }
 
-.floorspace .south {
+.floorspace .south div {
   -webkit-transform: rotate(180deg);
   transform: rotate(180deg);
 }
 
-.floorspace .east {
+.floorspace .east div {
   -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
 }
 
-.floorspace .west {
+.floorspace .west div {
   -webkit-transform: rotate(270deg);
   transform: rotate(270deg);
 }
