--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -130,46 +130,53 @@ fieldset.checkboxes input {
     border-radius: 4px;
     font-size: 20px;
 }
-.floorspace td {
+.floorspace td div{
     border-radius: 2px;
     width: 30px;
     height: 30px;
     color: white;
     padding: 3px;
 }
-.floorspace .current {
+.floorspace .current div{
     position: relative;
     background: rgba(0,0,0,0.5);
 
     &:before,
     &:after {
         position: absolute;
-        width: 4px;
-        height: 12px;
+        width: 6px;
+        height: 8px;
         border-radius: 10px;
         content: '';
         top: 4px;
+        text-align: center;
+        font-size: 6px;
+        padding: 3px 0;
         
     }
 
     &:before {
+        content: 'L';
         background: rgba(255,0,0,0.8);
         left: 4px;
     }
 
     &:after {
+        content: 'R';
         background: rgba(0,0,0,0.8);
-        left: 10px;
+        left: 12px;
     }
 }
 
-.floorspace .left {
+.floorspace .left div{
     &:before {
         top: 4px;
         left: 4px;
+        content: 'L';
     }
 
     &:after {
+        content: 'R';
         top: auto;
         left: auto;
         bottom: 4px;
@@ -179,14 +186,16 @@ fieldset.checkboxes input {
     }
     
 }
-.floorspace .right {
+.floorspace .right div {
     &:before {
         top: 4px;
         right: 4px;
         left: auto;
+        content: 'R';
     }
 
-    &:after {
+    &:after { 
+        content: 'L';
         top: auto;
         bottom: 4px;
         left: 4px;
@@ -196,22 +205,22 @@ fieldset.checkboxes input {
 
 }
 
-.floorspace .north {
+.floorspace .north div {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
 }
 
-.floorspace .south {
+.floorspace .south div {
     -webkit-transform: rotate(180deg);
     transform: rotate(180deg);
 }
 
-.floorspace .east {
+.floorspace .east div {
     -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
 }
 
-.floorspace .west {
+.floorspace .west div {
     -webkit-transform: rotate(270deg);
     transform: rotate(270deg);
 }
