--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -73,7 +73,7 @@ fieldset p {
 
 fieldset label {
     float: left;
-    width: 75%;
+    width: 35%;
     box-sizing: border-box;
     padding-right: 10px;
 }
@@ -92,7 +92,9 @@ fieldset input:not([type="button"]) {
 fieldset.checkboxes input {
     width: auto;
     margin-right: 10px;
-    clear: left;
+    &:nth-child(4n-2) {
+        clear: left;
+    }
 }
 
 .visualiser-wrapper {
